--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.trabalhosistemasdistribuidos/com.example.trabalhosistemasdistribuidos.HelloApplication
+                                com.example.trabalhosistemasdistribuidos/com.example.trabalhosistemasdistribuidos.ClientApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
