--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>20.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+
     </dependencies>
 
     <build>
